// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InlineEditTextInput /> InlineEditTextInput - default 1`] = `
<span
  className="kbc-inline-edit-link"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="text-muted"
  >
    Click to edit
  </span>
  <span
    className="kbc-icon-pencil"
  />
</span>
`;

exports[`<InlineEditTextInput /> InlineEditTextInput - disabled save button when text is not valid 1`] = `
<div
  className="form-inline kbc-inline-edit"
>
  <form
    onSubmit={[Function]}
  >
    <input
      className="form-control"
      disabled={false}
      id={undefined}
      onChange={[Function]}
      placeholder="Click to edit"
      type="text"
      value={undefined}
    />
    <div
      className="kbc-inline-edit-buttons"
    >
      <button
        className="kbc-inline-edit-cancel btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="kbc-icon-cross"
        />
      </button>
      <button
        className="kbc-inline-edit-submit btn btn-info"
        disabled={true}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`<InlineEditTextInput /> InlineEditTextInput - edit mode 1`] = `
<div
  className="form-inline kbc-inline-edit"
>
  <form
    onSubmit={[Function]}
  >
    <input
      className="form-control"
      disabled={false}
      id={undefined}
      onChange={[Function]}
      placeholder="Click to edit"
      type="text"
      value={undefined}
    />
    <div
      className="kbc-inline-edit-buttons"
    >
      <button
        className="kbc-inline-edit-cancel btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="kbc-icon-cross"
        />
      </button>
      <button
        className="kbc-inline-edit-submit btn btn-info"
        disabled={true}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`<InlineEditTextInput /> InlineEditTextInput - read mode 1`] = `
<span
  className="kbc-inline-edit-link"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="text-muted"
  >
    Click to edit
  </span>
  <span
    className="kbc-icon-pencil"
  />
</span>
`;

exports[`<InlineEditTextInput /> InlineEditTextInput - saving in edit mode 1`] = `
<div
  className="form-inline kbc-inline-edit"
>
  <form
    onSubmit={[Function]}
  >
    <input
      className="form-control"
      disabled={true}
      id={undefined}
      onChange={[Function]}
      placeholder="Click to edit"
      type="text"
      value={undefined}
    />
    <div
      className="kbc-inline-edit-buttons"
    >
      <button
        className="kbc-inline-edit-cancel btn btn-link"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="kbc-icon-cross"
        />
      </button>
      <button
        className="kbc-inline-edit-submit btn btn-info"
        disabled={true}
        type="submit"
      >
        Save
      </button>
      <span
        className="fa fa-spin fa-spinner"
      />
    </div>
  </form>
</div>
`;
